# Bagscaper

./: README.md  plan.md  verification-checklist.md
.github/workflows/: backend-ci.yml
Assets/: PersonalInfoSelection.prefab
Assets/Data/: survival_items.json  survival_score_rules.json
Assets/Editor/: FBXToPrefabConverter.cs  StartProfileAssetBuilder.cs
Assets/Resources/: OculusRuntimeSettings.asset
Assets/Scenes/: GameManagerTest.unity  Main Scene(demo).unity  Main Scene.unity  Result Scene.unity  Start Scene.unity  design.unity  testscene2.unity
Assets/Scripts/: BagscapeInputController.cs  BagscapeRayVisualizer.cs  BagscapeUIController.cs  GameApiClient.cs  GameApiModels.cs  GameManager.cs  (+9 more)
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
backend/: .gitignore  README.md  backend_plan.md  client_api_spec.md  items.json  pyproject.toml  requirements.txt  survival_types.json
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  evaluator.py  few_shots.json  prompts.py  research_facts.json
backend/app/api/: game.py
backend/app/core/: __init__.py  config.py  errors.py  observability.py
backend/app/domain/: __init__.py  preprocessor.py  rules.py
backend/app/repositories/: __init__.py  catalogs.py  sessions.py
backend/app/schemas/: game.py  item.py  survival.py
backend/app/services/: survival.py
backend/tests/: test_api.py  test_catalogs.py  test_concurrency.py  test_evaluator.py  test_inventory.py  test_preprocessor.py  test_prompts.py  test_rules.py  test_schemas.py  test_sessions.py
(+672 files in other folders)
