[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "bagscape-backend"
version = "3.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "google-genai==2.11.0",
  "opentelemetry-api==1.43.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.10.1",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
test = [
  "mypy==2.3.0",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
